--- a/web/src/index.css
+++ b/web/src/index.css
@@ -197,3 +197,10 @@ noscript img {
     opacity: 0.3;
   }
 }
+
+/* Shift Intercom messenger frame on larger screens */
+@media screen and (min-width: 640px) {
+  .intercom-messenger-frame {
+    transform: translateX(-300px);
+  }
+}
