--- a/web/src/index.css
+++ b/web/src/index.css
@@ -200,7 +200,7 @@ noscript img {
 
 /* Shift Intercom messenger frame on larger screens */
 @media screen and (min-width: 640px) {
-  .intercom-messenger-frame {
-    transform: translateX(-300px);
+  .intercom-lightweight-app-launcher {
+    right: 284px;
   }
 }
