rebrand(web) update icons (#8061)
* rebrand(web) update icons

* uopdate social images

* find other old icons and add loading animation

* only animate with opacity

* social image update

* fix naming

* use previous image sizes

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -188,6 +188,7 @@ noscript img {
   max-width: 300px;
 }
 
+/* Restore original simple opacity animation */
 @keyframes loading-icon-spinner-animation {
   0%,
   100% {
